--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch app.js",
+    "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
-  },
-  "devDependencies": {}
+  }
 }
